// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should increment the counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCart
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</div>
`;

exports[`ProductCard should show chorrectly the component 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCart
  </h1>
</div>
`;
